@@ -386,7 +386,7 @@ class SharkTopLevelBlock : public SharkBlock {
 
   // checkcast and instanceof
  private:
-  void do_full_instance_check();
+  void do_full_instance_check(ciKlass* klass);
   void do_trapping_instance_check();
 
   void do_instance_check();
